[package]
name = "git-sleipnir"
version = "0.1.0"
edition = "2021"

[package.metadata]
license = "MIT OR Apache-2.0"

[dependencies]
bytes = "1.10"
clap = { version = "4.4", features = ["derive"] }
env_logger = "0.11"
futures = "0.3"
log = "0.4"
natord = "1"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
url = "2"
